{
    "name": "CustomActions",
    "maps": [
        {
            "name": "Main",
            "id": "005f2326-9270-49d3-a61f-dbabf7e27aa9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "e12cd53f-e045-4d04-bfb6-5d1028b25b95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5e53e68-3694-477e-8e35-85afabae4373",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97fa004f-bc18-40f9-8f94-41d3eb4cda28",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}